--- a/about.html
+++ b/about.html
@@ -19,46 +19,47 @@
                 <img src="../kp_website_desktop/images/KP_logo-top.jpg" alt="Kanabec Publications, Inc. logo"></span>
             <div class="headingphone">320-679-2661</div>
         </header>
- 
 
 
-    <!--navigation-->
-    <nav>
-        <ul>
-            <li class="selected"><a href="index.html">HOME</a></li>
-            <li><a>
-                    <span-font>I
-                </a></span-font>
-            </li>
-            <li><a href="about.html"><span>ABOUT US</a></span></li>
-            <li><a>
-                    <span-font>I
-                </a></span-font>
-            </li>
-            <li><a href="products.html">PRODUCTS</a></li>
-            <li><a>
-                    <span-font>I
-                </a></span-font>
-            </li>
-            <li><a href="services.html"><span>SERVICES</a></span></li>
-            <li><a>
-                    <span-font>I
-                </a></span-font>
-            </li>
-            <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-    </nav>
 
-    <!--banner-->
-    <main class="banner-history">
-       <span class="bannerquote-about">OUR HISTORY</a></span>
-    </main>
+        <!--navigation-->
+        <nav>
+            <ul>
+                <li class="selected"><a href="index.html">HOME</a></li>
+                <li><a>
+                        <span-font>I
+                    </a></span-font>
+                </li>
+                <li><a href="about.html"><span>ABOUT US</a></span></li>
+                <li><a>
+                        <span-font>I
+                    </a></span-font>
+                </li>
+                <li><a href="products.html">PRODUCTS</a></li>
+                <li><a>
+                        <span-font>I
+                    </a></span-font>
+                </li>
+                <li><a href="services.html"><span>SERVICES</a></span></li>
+                <li><a>
+                        <span-font>I
+                    </a></span-font>
+                </li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
 
-    <!--print services section-->
-    <div id="history">
+        <!--banner-->
+        <main class="banner-history">
+            <span class="bannerquote-about">OUR HISTORY</a></span>
+        </main>
+
+        <!--print services section-->
+        <div id="history">
             <h8>WHO WE ARE</h8>
             <p2>Kanabec Publishing, Inc. has offered commercial printing servcies for more that 50 years. We provide
-                custom printing, finishing and graphic design services to businesses of all sizes. <br>Our copy center is
+                custom printing, finishing and graphic design services to businesses of all sizes. <br>Our copy center
+                is
                 available for all your copy center needs.<br><br>
 
                 The Kanabec County Times is a 3,000 circulation weekly newspaper published by Kanabec
@@ -76,13 +77,28 @@
                 Bob and Lois Beck and created Kanabec Publications, Inc. The corporation is part of a newspaper
                 group that includes the Pine City Pioneer, Isanti-Chisago County Star,<br>Braham Journal, Burnett County
                 Sentinel, Amery Free Press, Osceola Sun, County Messenger and Press Publications newspapers.
+        </div>
+
+
+        <!--footer-->
+        <footer class="footer">
+            <div class="footer-nav">
+                <div id="footerh1"><span>COMMERCIAL PRINTING</span></div>
+                <div class="footer-nav ul">
+                    <li class="selected"><a href="products.html"><span>PRINT PRODUCTS</span></a></li>
+                    <li class="selected"><a href="services.html"><span>PRINT SERVICES</span></a></li>
+                </div>
+
+                <div class="footer-nav">
+                    <div id="footerh1"><span>COMPANY</span></div>
+                    <div class="footer-nav ul">
+                        <li class="selected"><a href="about.html"><span>ABOUT US</span></a></li>
+                        <li class="selected"><a href="contact.html"><span>CONTACT</span></a></li>
+                    </div>
+                </div>
+        </footer>
     </div>
-
-
-    <!--footer
-        <footer class="footer"></footer>
-    </div>-->
-</div>
+    </div>
 
 
 </body>
