--- a/contact.html
+++ b/contact.html
@@ -73,11 +73,25 @@
     </div>
 
 
-    <!--footer
-        <footer class="footer"></footer>
-    </div>-->
-</div>
+    <!--footer-->
+    <footer class="footer">
+        <div class="footer-nav">
+            <div id="footerh1"><span>COMMERCIAL PRINTING</span></div>
+            <div class="footer-nav ul">
+                <li class="selected"><a href="products.html"><span>PRINT PRODUCTS</span></a></li>
+                <li class="selected"><a href="services.html"><span>PRINT SERVICES</span></a></li>
+            </div>
 
+            <div class="footer-nav">
+                <div id="footerh1"><span>COMPANY</span></div>
+                <div class="footer-nav ul">
+                    <li class="selected"><a href="about.html"><span>ABOUT US</span></a></li>
+                    <li class="selected"><a href="contact.html"><span>CONTACT</span></a></li>
+                </div>
+            </div>
+    </footer>
+</div>
+</div>
 
 </body>
 
