--- a/index.html
+++ b/index.html
@@ -154,8 +154,23 @@
             320-679-2661</a></h7>
 
     <!--footer-->
-        <footer class="footer"></footer>
-    </div>
+    <footer class="footer">
+        <div class="footer-nav">
+            <div id="footerh1"><span>COMMERCIAL PRINTING</span></div>
+            <div class="footer-nav ul">
+                <li class="selected"><a href="products.html"><span>PRINT PRODUCTS</span></a></li>
+                <li class="selected"><a href="services.html"><span>PRINT SERVICES</span></a></li>
+            </div>
+
+            <div class="footer-nav">
+                <div id="footerh1"><span>COMPANY</span></div>
+                <div class="footer-nav ul">
+                    <li class="selected"><a href="about.html"><span>ABOUT US</span></a></li>
+                    <li class="selected"><a href="contact.html"><span>CONTACT</span></a></li>
+                </div>
+            </div>
+    </footer>
+</div>
 </div>
 
 
