--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset=UTF-8>
     <title>Kanabec Publications, Inc.</title>
     <link rel="stylesheet" type="text/css" href="kpwebsite.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/rxl6rbf.css">
-    <link rel="stylesheet" href="https://use.typekit.net/skp0nff.css">
+    <link rel="stylesheet" type="text/css" href="kpwebsite-about.css" />
+    <link rel="stylesheet" type="text/css" href="kpwebsite-contact.css" />
     <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 </head>
 
@@ -16,7 +16,7 @@
     <div class="wrapper">
         <header class="top">
             <span class="headerlogo">
-                <img src="../kp_website_desktop/images/KP_logo-top.jpg" alt="Kanabec Publications, Inc. logo"></span>
+                <img src="../CapstoneProject/kp-website_desktop/images/KP_logo-top.jpg" alt="Kanabec Publications, Inc. logo"></span>
             <div class="headingphone">320-679-2661</div>
         </header>
 
@@ -95,7 +95,7 @@
     <div class="tableContainer">
         <div id="tableRow">
             <section id="products">
-                <img id="productpic" src="../kp_website_desktop/images/icon-printproducts.jpg" alt="brochure icon"
+                <img id="productpic" src="../kp-website/images/icon-printproducts.jpg" alt="brochure icon"
                     class="center">
                 <figcaption><a href="#h1" style=text-decoration:none>COMMERCIAL PRINTING<br>PRODUCTS</a></figcaption>
                 <iconcopy>We provide full-color custom business<br>
@@ -106,7 +106,7 @@
             </section>
 
             <section id="services">
-                <img id="servicepic" src="../kp_website_desktop/images/icon-printservices.jpg"
+                <img id="servicepic" src="../kp-website/images/icon-printservices.jpg"
                     alt="computer screen icon" class="center">
                 <figcaption><a href="#h3" style=text-decoration:none>COMMERCIAL PRINTING<br>SERVICES</a></figcaption>
                 <iconcopy>Our professional staff can take your<br>
@@ -116,7 +116,7 @@
             </section>
 
             <section id="copycenter">
-                <img id="copycenterpic" src="../kp_website_desktop/images/icon-copycenter.jpg" alt="book icon"
+                <img id="copycenterpic" src="../kp-website/images/icon-copycenter.jpg" alt="book icon"
                     class="center">
                 <figcaption><a href="#h5" style=text-decoration:none>COPY CENTER</a></figcaption>
                 <iconcopy>Stop by our copy center for same<br>
@@ -125,7 +125,7 @@
             </section>
 
             <section id="advertising">
-                <img id="advertisingpic" src="../kp_website_desktop/images/icon-advertising.jpg" alt="newspaper icon"
+                <img id="advertisingpic" src="../kp-website/images/icon-advertising.jpg" alt="newspaper icon"
                     class="center">
                 <figcaption><a href="https://www.moraminn.com/place_an_ad/" style=text-decoration:none>NEWS/ADVERTISING</a></figcaption>
                 <iconcopy>Advertise with Northstar Media/Kanabec<br>
@@ -137,7 +137,7 @@
 
     <!--print products section-->
     <div class="sidebar">
-        <img src="../kp_website_desktop/images/products-image-new.jpg" alt="print materials">
+        <img src="../kp-website/images/products-image-new.jpg" alt="print materials">
     </div>
 
     <div id="printproducts">
@@ -155,7 +155,7 @@
     <!--print services section-->
     <div class="copybox">
         <div id="sidebar-services">
-            <img src="../kp_website_desktop/images/services-image-home.jpg" alt="stack of booklets showing binding">
+            <img src="../kp-website/images/services-image-home.jpg" alt="stack of booklets showing binding">
         </div>
 
         <div id="printservices">
@@ -173,7 +173,7 @@
 
     <!--copy center section-->
     <div class="sidebar-copycenter">
-        <img src="../kp_website_desktop/images/copy-center-image-home.jpg" alt="print materials">
+        <img src="../kp-website/images/copy-center-image-home.jpg" alt="print materials">
     </div>
 
     <div id="ccenter">
